--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus: 'demowebsite'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
-email: wowthemesnet@gmail.com
+email: vucuong.marketing@gmail.com
 
 # Authors
 authors:
@@ -18,18 +18,18 @@ authors:
     name: Sal
     display_name: Sal
     avatar: 'assets/images/avatar-sal.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/donate/
+    email: vucuong.marketing@gmail.com
+    web: https://vietnamcrypto.github.io
     twitter: https://twitter.com/wowthemesnet
-    description: "Author of Memoirs, a Bootstrap Medium styled template available for Jekyll. You are currently previewing Jekyll template demo."
+    description: "We passionate about blockchain and crypto currency."
   john:
-    name: John
-    display_name: John    
+    name: VietNam Crypto 
+    display_name: VietNam Crypto 
     avatar: 'assets/images/avatar.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
+    email: vucuong.marketing@gmail.com
+    web: https://vietnamcrypto.github.io
     twitter: https://twitter.com/wowthemesnet
-    description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
+    description: "We passionate about blockchain and crypto currency."
 
 # Plugins
 plugins:
