--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-name: "Memoirs"
-title: "Memoirs"
-description: "I will take you on the fabulous world of exploration. Travel, culture, lifestyle. Eat, Pray, Love!"
+name: "VNCrypto"
+title: "VNCrypto"
+description: "We passionate about blockchain and crypto currency."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: https://vietnamcrypto.github.io
