--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "We passionate about blockchain and crypto currency."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: https://vietnamcrypto.github.io
-google_analytics: 'G-1Y1DFSHNZD'
+google_analytics: 'GTM-NP7TVKM'
 disqus: 'demowebsite'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
